// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BTextarea should add disabled class when the disabled prop is set 1`] = `
<div class="b-textarea b-flex-column">
    <label for="test">
        test
        <!---->
    </label>
    <textarea data-vv-as=" " data-vv-name="4" data-vv-scope="4" data-vv-validate-on="input|blur" id="test" disabled="disabled" class="b-fixed-size" data-vv-id="4" aria-required="false" aria-invalid="false"></textarea>
    <!---->
</div>
`;

exports[`BTextarea should fail validation if input exceeds maxLength 1`] = `
<div class="b-textarea b-flex-column">
    <label for="test">
        test
        <!---->
    </label>
    <textarea data-vv-as="maxLength" data-vv-name="5" data-vv-scope="5" data-vv-validate-on="input|blur" id="test" maxlength="1" class="b-fixed-size b-error-border" data-vv-id="5" aria-required="false" aria-invalid="true">12</textarea>
    <div id="error-test" class="b-error-text"><span>
      The maxLength field may not be greater than 1 characters.
    </span></div>
</div>
`;

exports[`BTextarea should fail validation if input is less than minLength 1`] = `
<div class="b-textarea b-flex-column">
    <label for="test">
        test
        <!---->
    </label>
    <textarea data-vv-as="minLength" data-vv-name="6" data-vv-scope="6" data-vv-validate-on="input|blur" id="test" minlength="5" class="b-fixed-size b-error-border" data-vv-id="6" aria-required="false" aria-invalid="true">12</textarea>
    <div id="error-test" class="b-error-text"><span>
      The minLength field must be at least 5 characters.
    </span></div>
</div>
`;

exports[`BTextarea should render component 1`] = `
<div class="b-textarea b-flex-column">
    <label for="test">
        test
        <!---->
    </label>
    <textarea data-vv-as=" " data-vv-name="1" data-vv-scope="1" data-vv-validate-on="input|blur" id="test" class="b-fixed-size" data-vv-id="1" aria-required="false" aria-invalid="false"></textarea>
    <!---->
</div>
`;

exports[`BTextarea should render component with a label 1`] = `
<div class="b-textarea b-flex-column">
    <label for="test">
        test
        <!---->
    </label>
    <textarea data-vv-as=" " data-vv-name="2" data-vv-scope="2" data-vv-validate-on="input|blur" id="test" class="b-fixed-size" data-vv-id="2" aria-required="false" aria-invalid="false"></textarea>
    <!---->
</div>
`;

exports[`BTextarea should render component with label and asterisk 1`] = `
<div class="b-textarea b-flex-column">
    <label for="test">
        test<span aria-hidden="true" class="b-required">*</span></label>
    <textarea data-vv-as=" " data-vv-name="3" data-vv-scope="3" data-vv-validate-on="input|blur" id="test" required="required" class="b-fixed-size" data-vv-id="3" aria-required="true"
        aria-invalid="false"></textarea>
    <!---->
</div>
`;
